--- a/camera_ready/experiments.tex
+++ b/camera_ready/experiments.tex
@@ -59,7 +59,7 @@ in parallel over different machines.
 To provide a more fine-grained comparison,
 Fig.~\ref{fig:box_plot} shows the variations of run times of the different local ABCD tasks for every experiment. 
 We have excluded the crane and vehicle case study in the figure due to an expected large variance originating from different dynamics. 
-The corresponding numbers will be reported in the next section.
+%The corresponding numbers will be reported in the next section.
 Notice that a higher number of input-state pairs does not necessarily result in a higher run time for local ABCD as the 
 number of transitions and features of the parallel implementation can play a role. 
 %
@@ -76,7 +76,7 @@ As reflected in Table~\ref{tab:runtimes}, memory requirement for the global ABCD
 	\caption{Variations of run times of local ABCD among different agents for three case studies.}
 	\label{fig:box_plot}
 \end{figure}
-
+%\vspace{-cm}
 \begin{figure*}[t]
     \large
      \centering
